# hf-gpu-cluster-optimizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PORTING.md  PREFLIGHT.md  README.md  __init__.py  base.py  checkpoint.py  concurrent_train.py  data_io.py  fault_tolerance.py  metric_sinks.py  metrics.py  modal_app.py  nccl_env_defaults.py  pyproject.toml  registry.py  report.py  requirements-full.txt  requirements.txt  runner.py  seed.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
configs/: _template.yaml  all_models.yaml  cost_controlled_modal.yaml  hf_examples.yaml
hf_cluster_optimizer/: base.py  checkpoint.py  concurrent_train.py  data_io.py  metrics.py  modal_app.py  registry.py  runner.py  seed.py
hf_cluster_optimizer/models/: __init__.py  _seq_base.py  _torch_common.py  catboost.py  diffusion.py  generic_sklearn.py  generic_torch.py  hf_transformer.py  lightgbm.py  lstm.py  manifold.py  ntm.py  q_learning.py  rnn.py  transformer.py  xgboost.py
hf_cluster_optimizer/tests/: smoke.py
models/: __init__.py  _seq_base.py  _torch_common.py  catboost.py  diffusion.py  generic_sklearn.py  generic_torch.py  hf_transformer.py  lightgbm.py  lstm.py  manifold.py  ntm.py  q_learning.py  rnn.py  transformer.py  xgboost.py
scripts/: __init__.py  preflight.ps1  preflight_validate.py
tests/: smoke.py
