[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-cluster-optimizer"
version = "0.1.0"
description = "A HuggingFace-native concurrent training harness for GPU clusters."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "The HF Cluster Optimizer contributors" }]
keywords = [
    "huggingface",
    "transformers",
    "gpu-cluster",
    "concurrent-training",
    "training-harness",
    "modal",
    "machine-learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
hf = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "Pillow>=10.0",
]
sklearn = ["scikit-learn>=1.3", "joblib>=1.3"]
boosting = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
modal = ["modal>=0.62"]
full = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "modal>=0.62",
]

[project.scripts]
hfco-train = "hf_cluster_optimizer.concurrent_train:main"

[project.urls]
# Set these to your GitHub <owner>/<repo> after creating the repo.
Homepage = "https://github.com/<owner>/hf-cluster-optimizer"
Repository = "https://github.com/<owner>/hf-cluster-optimizer"
Issues = "https://github.com/<owner>/hf-cluster-optimizer/issues"
Changelog = "https://github.com/<owner>/hf-cluster-optimizer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["hf_cluster_optimizer*"]
