[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modallabs"
version = "0.1.0"
description = "Portable concurrent training framework for HuggingFace + custom ML models, runs locally or on Modal Labs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "modallabs contributors" }]
keywords = ["machine-learning", "huggingface", "modal", "training", "concurrent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
hf = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "Pillow>=10.0",
]
sklearn = ["scikit-learn>=1.3", "joblib>=1.3"]
boosting = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
modal = ["modal>=0.62"]
full = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "modal>=0.62",
]

[project.scripts]
modallabs-train = "modallabs.concurrent_train:main"

[project.urls]
Homepage = "https://github.com/wmolyneaux/hf-cluster-optimizer"

# Flat layout: the package files (base.py, runner.py, models/, tests/, ...)
# live directly next to this pyproject.toml, so the `modallabs` import name
# maps onto "." rather than a `modallabs/` subdirectory. `modallabs.tests`
# is INCLUDED on purpose -- the smoke test is the package's own conformance
# suite and `python -m modallabs.tests.smoke` must work after a plain
# `pip install`.
[tool.setuptools]
packages = ["modallabs", "modallabs.models", "modallabs.tests"]

[tool.setuptools.package-dir]
"modallabs" = "."
"modallabs.models" = "models"
"modallabs.tests" = "tests"
