[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modallabs"
version = "0.1.0"
description = "Portable concurrent training framework for HuggingFace + custom ML models, runs locally or on Modal Labs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "modallabs contributors" }]
keywords = ["machine-learning", "huggingface", "modal", "training", "concurrent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
hf = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "Pillow>=10.0",
]
sklearn = ["scikit-learn>=1.3", "joblib>=1.3"]
boosting = ["lightgbm>=4.0", "xgboost>=2.0", "catboost>=1.2"]
modal = ["modal>=0.62"]
# Parameter-efficient fine-tuning (LoRA / QLoRA / prefix / IA3 ...) for
# the HuggingFace heads. Optional: a `peft:` config block is inert
# without this installed.
peft = ["torch>=2.1", "transformers>=4.40", "peft>=0.10"]
# Optional external metric sinks (mirrored alongside metrics.jsonl).
tensorboard = ["tensorboard>=2.13"]
wandb = ["wandb>=0.16"]
dev = ["ruff>=0.4", "mypy>=1.8", "pre-commit>=3.5", "build>=1.0"]
full = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.14",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "Pillow>=10.0",
    "peft>=0.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "modal>=0.62",
    "tensorboard>=2.13",
]

[project.scripts]
modallabs-train = "modallabs.concurrent_train:main"
modallabs-report = "modallabs.report:main"

[project.urls]
Homepage = "https://github.com/wmolyneaux/hf-gpu-cluster-optimizer"

# Flat layout: the package files (base.py, runner.py, models/, tests/, ...)
# live directly next to this pyproject.toml, so the `modallabs` import name
# maps onto "." rather than a `modallabs/` subdirectory. `modallabs.tests`
# is INCLUDED on purpose -- the smoke test is the package's own conformance
# suite and `python -m modallabs.tests.smoke` must work after a plain
# `pip install`.
[tool.setuptools]
packages = ["modallabs", "modallabs.models", "modallabs.tests"]

[tool.setuptools.package-dir]
"modallabs" = "."
"modallabs.models" = "models"
"modallabs.tests" = "tests"

[tool.ruff]
target-version = "py310"
line-length = 100
# The flat layout has the package files at the repo root; nothing to
# special-case for src/.
extend-exclude = ["build", "dist", "*.egg-info"]

[tool.ruff.lint]
# Deliberately the default ruff rule set (pyflakes + a pycodestyle
# error subset): catches real mistakes (unused imports/names, undefined
# names, f-strings without placeholders) without forcing a wholesale
# reformat of an already-clean, consistently-styled codebase. Widen the
# selection (e.g. add "I", "UP", "B") in a dedicated cleanup PR if
# desired -- not bundled here so the diff stays reviewable.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Pragmatic, not strict: the codebase leans on lazy imports and Any-typed
# Trainer payloads by design. This config is for catching obvious errors,
# not enforcing full type coverage. CI runs mypy informationally only.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
exclude = ["build/", "dist/"]
